<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.czertainly</groupId>
        <artifactId>dependencies</artifactId>
        <version>1.4.0</version>
    </parent>

    <artifactId>software-cryptography-provider</artifactId>
    <version>1.3.2</version>
    <name>CZERTAINLY-Software-Cryptography-Provider</name>

    <properties>
        <!-- Temporary override for CVE-2026-41293 and CVE-2026-43512.
          Remove after the parent com.czertainly:dependencies upgrades to a Spring Boot release that ships Tomcat 10.1.55+
          (expected with Spring Boot 3.5.15). Then delete this override. -->
        <tomcat.version>10.1.55</tomcat.version>

        <java.version>21</java.version>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.organization>ilm</sonar.organization>
        <sonar.projectKey>ilm_software-cryptography-provider</sonar.projectKey>

        <!-- Java migrations that have already shipped are checksum-frozen: Flyway compares
             the value recorded in every deployed database against the one the migration
             reports, and that value is derived from the source file. Editing one to satisfy
             a rule would fail validation on upgrade, so their findings are ignored rather
             than fixed. Listed file by file on purpose - a migration that has not been
             released yet is still freely editable and must keep being analysed. Add an entry
             here only once a migration has shipped. Coverage is measured either way. -->
        <sonar.issue.ignore.multicriteria>frozenMigration1,frozenMigration2</sonar.issue.ignore.multicriteria>
        <sonar.issue.ignore.multicriteria.frozenMigration1.ruleKey>java:*</sonar.issue.ignore.multicriteria.frozenMigration1.ruleKey>
        <sonar.issue.ignore.multicriteria.frozenMigration1.resourceKey>src/main/java/db/migration/V202505121340__DeactivateTokensWithDeprecatedAlgorithms.java</sonar.issue.ignore.multicriteria.frozenMigration1.resourceKey>
        <sonar.issue.ignore.multicriteria.frozenMigration2.ruleKey>java:*</sonar.issue.ignore.multicriteria.frozenMigration2.ruleKey>
        <sonar.issue.ignore.multicriteria.frozenMigration2.resourceKey>src/main/java/db/migration/V202604211200__MigrateMLKEMKeyStorageFormat.java</sonar.issue.ignore.multicriteria.frozenMigration2.resourceKey>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.czertainly</groupId>
            <artifactId>interfaces</artifactId>
            <version>2.18.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/net.sf.kxml/kxml2 -->
        <dependency>
            <groupId>net.sf.kxml</groupId>
            <artifactId>kxml2</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-configuration2</artifactId>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk18on</artifactId>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcpkix-jdk18on</artifactId>
        </dependency>

        <!-- Spring -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-cache</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
        </dependency>

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>

        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-database-postgresql</artifactId>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>

        <!-- markdown string generator for info attributes -->
        <dependency>
            <groupId>net.steppschuh.markdowngenerator</groupId>
            <artifactId>markdowngenerator</artifactId>
            <version>1.3.1.1</version>
        </dependency>

        <!-- Java EE -->
        <!-- API -->
        <dependency>
            <groupId>jakarta.xml.ws</groupId>
            <artifactId>jakarta.xml.ws-api</artifactId>
            <version>${jakarta-xml-ws.version}</version>
        </dependency>

        <!-- Tests -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.junit.vintage</groupId>
                    <artifactId>junit-vintage-engine</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>2.7.4</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <configuration>
                    <packagingExcludes>
                        **/META-INF/maven/**,
                    </packagingExcludes>
                    <archive>
                        <addMavenDescriptor>false</addMavenDescriptor>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <executable>true</executable>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>build-info</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.hibernate.orm.tooling</groupId>
                <artifactId>hibernate-enhance-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>@{argLine}</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <executions>
                    <!-- Holds the coverage floor in the build itself. The SonarCloud quality
                         gate measures new code only and has no coverage condition, so without
                         this the project-wide figure could drift down unnoticed. -->
                    <execution>
                        <id>check-coverage</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <rule>
                                    <element>BUNDLE</element>
                                    <limits>
                                        <limit>
                                            <counter>LINE</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.80</minimum>
                                        </limit>
                                        <limit>
                                            <counter>BRANCH</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.70</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/czertainly/*</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>central-portal</id>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
        </repository>
    </repositories>

</project>
